2008-04-17  Jaroslav Hajek <highegg@gmail.com>

	* inst/demo_octgpr.m: refactor demo
	* inst/rbf_centers.m: use kmeans++ initialization due to Arthur &
	Vassilvitskii
	* src/Changelog -> ChangeLog: transform to package root dir

2008-04-15  Jaroslav Hajek <highegg@gmail.com>

	* src/pdist2_mw.cc: new source.
	* inst/rbf_centers.m: new function.

2008-04-04  Jaroslav Hajek <highegg@gmail.com>

	* src/nllgpr.f: use QR decomposition instead of normal equations 
	for mean fitting.
	* src/train.c, src/setup.c: change workspace size for nllgpr
	* src/configure.in: update the LAPACK routines checked
	* src/configure: regenerate

2008-03-26  Jaroslav Hajek <highegg@gmail.com>

	* src/config.log, src/config.status, src/config.h, src/Makefile: remove.
	* src/configure.in: add support for -fPIC flags.
	* src/configure, src/config.h.in: regenerate.
	* src/Makefile.in: add distclean target

2008-02-28  Jaroslav Hajek <highegg@gmail.com>

	* src/corrf.f: added Matern-3/2 and Matern-5/2 correlation funcs
	* src/get_corrf.c, src/forsubs.h: included the new correlation funcs
	* src/gpr_train.cc: documentation for the new correlation funcs

2008-02-24  Jaroslav Hajek <highegg@gmail.com>

	* src/optdrv.f: implement objective reduction stopping criterion
	* src/gprmod.h, src/train.c, src/gpr_train.cc: add support for the new
	feature
	* src/forsubs.h src/nl0gpr.f: correct subroutine name
	* src/train.c: correct CP array size

2008-02-19  Jaroslav Hajek <highegg@gmail.com>

	* src/*.{h,c,cc}: adjusted C/C++ sources to meet GNU coding standards

2008-02-18  Jaroslav Hajek <highegg@gmail.com>

	* src/forsubs.h src/gprmod.h src/predict.c src/train.c src/setup.c: 
	added const modifiers where appropriate.
	* src/grp_train, src/gpr_predict: replaced Array::fortran_vec with
	Array::data where appropriate, to prevent unnecessary copying.

2008-02-15  Jaroslav Hajek <highegg@gmail.com>

	* inst/demo_octgpr.m: improved demo.

2008-02-13  Jaroslav Hajek <highegg@gmail.com>
